[package]
authors = ["Stefan Deml<stefandeml@gmail.com>"]
description = "Bellman scaling benchmarks"
license = "MIT/Apache-2.0"
name = "bellman-benchmarks"
version = "0.0.2"
edition = "2018"

[lib]
name = "benchmarks"
path = "src/lib.rs"

[dependencies]
rand = "0.4"
hex = "0.3.2"
time = "0.1"
num-bigint = "0.2"
rust-crypto = "0.2"

#bellman = { path = "../bellman"}
#sapling-crypto = { path = "../sapling-crypto"}

sapling-crypto = { git = 'https://github.com/matterinc/sapling-crypto'}
bellman = { git = 'https://github.com/matterinc/bellman', tag = "0.2.0", features = ["multicore", "gm17", "sonic"] }
